--- a/index.html
+++ b/index.html
@@ -23,49 +23,8 @@
     .cta { text-align:center; margin-top:30px; }
     .cta a { background:#25D366; color:white; text-decoration:none; padding:15px 30px; border-radius:8px; font-weight:bold; display:inline-block; }
 
-    /* فلتر أفقي مع أيقونات */
-    .filter {
-      display:flex;
-      justify-content:center;
-      gap:20px;
-      margin-bottom:40px;
-      flex-wrap:wrap;
-    }
-    .filter button {
-      display:flex;
-      align-items:center;
-      gap:8px;
-      padding:12px 25px;
-      border:none;
-      border-radius:50px;
-      background:rgba(255,111,97,0.2);
-      color:#ff6f61;
-      cursor:pointer;
-      font-weight:bold;
-      transition:0.3s;
-      font-size:16px;
-    }
-    .filter button img {
-      width:24px;
-      height:24px;
-    }
-    .filter button:hover, .filter button.active {
-      background:#ff6f61;
-      color:white;
-      transform:scale(1.05);
-      box-shadow:0 5px 15px rgba(0,0,0,0.2);
-    }
-
-    /* منيو تفاعلي */
-    .menu { display:flex; flex-wrap:wrap; justify-content:center; gap:20px; }
-    .item { display:flex; flex-direction:column; align-items:center; background:white; padding:15px; border-radius:10px; box-shadow:0 5px 15px rgba(0,0,0,0.1); width:200px; opacity:0; transform:translateY(30px); transition:all 0.5s ease; }
-    .item.show { opacity:1; transform:translateY(0); }
-    .item img { width:100%; height:150px; object-fit:cover; border-radius:8px; }
-    .item h3 { margin:10px 0 5px 0; color:#ff6f61; }
-    .price { font-weight:bold; color:#ff6f61; }
-
     footer { background:#333; color:white; text-align:center; padding:20px; margin-top:40px; }
-    @media(max-width:600px) { .features, .pricing { flex-direction:column; } .menu { flex-direction:column; align-items:center; } .item { width:90%; } }
+    @media(max-width:600px) { .features, .pricing { flex-direction:column; } }
   </style>
 </head>
 <body>
@@ -121,72 +80,14 @@
       </ul>
     </div>
     <div class="card">
-      <h3>Standard</h3>
-      <p>1200 – 1500 جنيه/سنة</p>
-      <ul>
-        <li>منيو كامل وعدد غير محدود من المنتجات</li>
-        <li>QR Code لكل طاولة أو عام</li>
-        <li>لوحة تحكم سهلة + دعم فني أساسي</li>
-      </ul>
-    </div>
-    <div class="card">
       <h3>Premium</h3>
       <p>1800 – 2500 جنيه/سنة</p>
       <ul>
-        <li>كل مزايا Standard</li>
+        <li>منيو كامل وعدد غير محدود من المنتجات</li>
+        <li>QR Code لكل طاولة أو عام</li>
+        <li>لوحة تحكم سهلة + دعم سريع</li>
         <li>تصميم منيو مخصص</li>
-        <li>تحديث غير محدود + دعم سريع</li>
       </ul>
-    </div>
-  </div>
-</section>
-
-<!-- المنيو التفاعلي -->
-<section>
-  <h2>منيو تفاعلي</h2>
-  <div class="filter">
-    <button class="active" onclick="filterSelection('all')">
-      <img src="https://img.icons8.com/ios-filled/50/ff6f61/menu.png" alt="الكل"> الكل
-    </button>
-    <button onclick="filterSelection('مشروبات')">
-      <img src="https://img.icons8.com/ios-filled/50/ff6f61/cup.png" alt="مشروبات"> مشروبات
-    </button>
-    <button onclick="filterSelection('أكلات')">
-      <img src="https://img.icons8.com/ios-filled/50/ff6f61/hamburger.png" alt="أكلات"> أكلات
-    </button>
-    <button onclick="filterSelection('حلويات')">
-      <img src="https://img.icons8.com/ios-filled/50/ff6f61/cake.png" alt="حلويات"> حلويات
-    </button>
-  </div>
-
-  <div class="menu">
-    <!-- مشروبات -->
-    <div class="item مشروبات">
-      <img src="./قهوة.png" alt="كابتشينو">
-      <h3>كابتشينو</h3>
-      <p class="price">40 جنيه</p>
-    </div>
-    <div class="item مشروبات">
-      <img src="شااى.png" alt="آيس تي">
-      <h3>آيس تي</h3>
-      <p class="price">30 جنيه</p>
-    </div>
-    <!-- أكلات -->
-    <div class="item أكلات">
-      <img src="برجر.png" alt="برجر كلاسيكي">
-      <h3>برجر كلاسيكي</h3>
-      <p class="price">80 جنيه</p>
-    </div>
-    <div class="item أكلات">
-      <img src="بيتزا.png" alt="بيتزا مارجريتا">
-      <h3>بيتزا مارجريتا</h3>
-      <p class="price">120 جنيه</p>
-    </div>
-    <!-- حلويات -->
-    <div class="item حلويات">
-      <img src="كيكه.png" alt="كيكة الشوكولاتة">
-      <h3>كيكة الشوكولاتة</h3>
-      <p class="price">50 جنيه</p>
     </div>
   </div>
 </section>
@@ -198,33 +99,6 @@
 <footer>
   &copy; 2025 جميع الحقوق محفوظة
 </footer>
-
-<script>
-function filterSelection(category) {
-  var items = document.getElementsByClassName('item');
-  if(category === 'all') category = '';
-  for(var i=0; i<items.length; i++){
-    removeClass(items[i], 'show');
-    if(items[i].className.indexOf(category) > -1) addClass(items[i], 'show');
-  }
-  var btns = document.querySelectorAll('.filter button');
-  btns.forEach(btn => btn.classList.remove('active'));
-  event.target.classList.add('active');
-}
-
-function addClass(element, name) {
-  element.classList.add(name);
-}
-
-function removeClass(element, name) {
-  element.classList.remove(name);
-}
-
-// تفعيل عرض المنيو عند تحميل الصفحة
-window.onload = function() {
-  filterSelection('all');
-}
-</script>
 
 </body>
 </html>
